@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="3"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="44"
+VERSION_BUILD="45"
 
 # $Log$
+#
+# BUILD : 1.3.0.45 (SVN)
+# BUGS  : 378,394
+# NOTES : inspircd11 fixes: fixed autoop not working and recent fix for double open count was broken
 #
 # BUILD : 1.3.0.44 (SVN)
 # BUGS  : N/A
